# Coordinator

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
msg/: TargetChased.msg
src/: Coordinator.cpp  Coordinator.h  main.cpp
src/Utils/: Timestamp.h
